--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ nav ul li a{
     background: #ADFF2F;
 }
 .service-box{
-    width: 80%;
+    width: 40%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -394,6 +394,65 @@ hr{
         font-size: 14px;
     }
 }
+
+/* nnnnnnnnnnnnnnnnnnnnnnnnnnnnnn */
+
+:root{
+    --size: 200px;
+}
+
+.cube{
+    margin: 12rem auto 0;
+    width: var(--size);
+    height: var(--size);
+    transform-style: preserve-3d;
+    /* transform: rotateY(30deg) rotateZ(30deg); */
+    animation: spin 30s infinite linear;
+}
+.side{
+    position: absolute;
+    opacity: 0.8;
+    width: var(--size);
+    height: var(--size);
+}
+#front{
+    background: url(FilohaMpanatanterakaMamyRasolofondraibe.jpg) no-repeat center/cover;
+    transform: translateZ(calc(var(--size) / 2));
+}
+#top{
+    background: url(MmeLantoniainaRazafindramiadana.jpg) no-repeat center/cover;
+    transform: rotateX(-270deg) translateY(calc(-1 * (var(--size) / 2)));
+    transform-origin: top center;
+}
+#bottom{
+    background: url(MmeLeaFanihia.jpg) no-repeat center/cover;
+    transform: rotateX(270deg) translateY(calc(var(--size) / 2));
+    transform-origin: bottom center;
+}
+#right{
+    background: url(MmeRabakoharinanjanaharyClarisse.jpg) no-repeat center/cover;
+    transform: rotateY(-270deg) translateX(calc(var(--size) / 2));
+    transform-origin: top right;
+}
+#left{
+    background: url(MmeTianaAndriatsimijay.jpg) no-repeat center/cover;
+    transform: rotateY(270deg) translateX(calc(-1 *(var(--size) / 2)));
+    transform-origin: center left;
+}
+#back{
+    background: url(PasteurAlainDeNeriAndrianantenaina.jpg) no-repeat center/cover;
+    transform: rotateY(-180deg) translateZ(calc((var(--size) /2)));
+}
+@keyframes spin{
+    from{
+        transform: rotateX(0) rotateY(0) rotateZ(0);
+    }
+    to{
+        transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+    }
+}
+
+
 
 
 
