--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@
     right: -250px;
     top: 0;
     background: transparent;
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.9);
     z-index: 2;
     transition: 0.5s;
 }
