--- a/style.css
+++ b/style.css
@@ -132,7 +132,15 @@ nav ul li a{
     width: 20px;
     margin-top: 15px;
 }
-
+.video-container{
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    object-fit: cover;
+}
 .pimg{
     position: relative;
     opacity: 0.80;
@@ -150,6 +158,22 @@ nav ul li a{
     color: #fff;
     font-weight: bolder;
     left: 100px;
+    z-index: 10;
+    text-shadow: 
+   
+ 
+    .1vw 0vw .1vw #395016,
+    .15vw 0vw .1vw #395016,
+    .4vw 0vw .1vw #395016
+    
+    .1vw 0vw .5vw #7bb623,
+    .15vw 0vw .20vw #7bb623,
+    .4vw 0vw .10vw #7bb623,
+ 
+    .1vw 0vw .10vw #7bb623,
+    .15vw 0vw .30vw #7bb623,
+    .4vw 0vw .10vw #7bb623
+    ;
 }
 
 @media screen and (max-width: 770px){
@@ -173,8 +197,32 @@ nav ul li a{
     color: #ADFF2F;
     font-weight: bold;
     position: relative;
-    z-index: 1;
+    z-index: 11;
     display: inline-block;
+    text-shadow: 
+    .1vw 0vw .25vw #ADFF2F,
+    .15vw 0vw .25vw #ADFF2F,
+ 
+    .1vw 0vw .1vw #395016,
+    .15vw 0vw .1vw #395016,
+    .4vw 0vw .1vw #395016,
+ 
+    .1vw 0vw .2vw #395016,
+    .15vw 0vw .2vw #395016,
+    .4vw 0vw .2vw #395016,
+ 
+    .1vw 0vw .1vw #7bb623,
+    .15vw 0vw .1vw #7bb623,
+    .4vw 0vw .5vw #7bb623,
+ 
+    .1vw 0vw .5vw #7bb623,
+    .15vw 0vw .20vw #7bb623,
+    .4vw 0vw .10vw #7bb623,
+ 
+    .1vw 0vw .10vw #7bb623,
+    .15vw 0vw .30vw #7bb623,
+    .4vw 0vw .10vw #7bb623
+    ;
 }
 .title-text p::after{
     content:'';
@@ -220,6 +268,30 @@ nav ul li a{
     margin-bottom: 10px;
     font-weight: 50 bolder;
     color: #ADFF2F;
+    text-shadow: 
+    .1vw 0vw .25vw #ADFF2F,
+    .15vw 0vw .25vw #ADFF2F,
+ 
+    .1vw 0vw .1vw #395016,
+    .15vw 0vw .1vw #395016,
+    .4vw 0vw .1vw #395016,
+ 
+    .1vw 0vw .2vw #395016,
+    .15vw 0vw .2vw #395016,
+    .4vw 0vw .2vw #395016,
+ 
+    .1vw 0vw .1vw #7bb623,
+    .15vw 0vw .1vw #7bb623,
+    .4vw 0vw .5vw #7bb623,
+ 
+    .1vw 0vw .5vw #7bb623,
+    .15vw 0vw .20vw #7bb623,
+    .4vw 0vw .10vw #7bb623,
+ 
+    .1vw 0vw .10vw #7bb623,
+    .15vw 0vw .30vw #7bb623,
+    .4vw 0vw .10vw #7bb623
+    ;
 }
 #renfort{
     font-weight: 200;
