--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     font-family:  'Poppins', sans-serif ,Open sans, Helvetica,Cambria , Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 body{
-    background: #eb3903;
+    background: #ff1744;
 
     transition: all 25s ease;
 }
