--- a/style.css
+++ b/style.css
@@ -2,29 +2,29 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:  'Poppins', sans-serif ,Open sans, Helvetica,Cambria , Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Poppins', sans-serif ,Open sans, Helvetica,Cambria , Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 body{
-    background: #ff1744;
-
+    background: #d3003f;
     transition: all 10s ease;
-}
+    color: #eee;
+    align-items: center;
+        }
 
 .bg-active{
     background: #2ecc71;
 }
 .container{
     display: flex;
-    background: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.8)),url(BoulesRandom1.png);
+    background: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.9)),url(BoulesRandom1.png);
         }
 
 #banner{
     background: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.2)),url(Madagascar221.png);
     background-size: cover;
-  
     background-position: 0in;
     height: 100vh;
-    width: 100%;
+    
     background-color: blue;
     border-radius: 50% 0% 50% 0%;
     transform: scaleX(1.1);
